navigation bugs fixed

--- a/interface/src/css/customTheme.scss
+++ b/interface/src/css/customTheme.scss
@@ -1143,9 +1143,9 @@ body {
 
 .max1200 {
     max-width: 1200px !important;
-    &-1{
-        max-width: 1230px !important;
-    }
+}
+.max1200-1{
+    max-width: 1230px !important;
 }
 
 .width90vw{
