shadow icon positioning bug fixed

--- a/interface/src/css/customTheme.scss
+++ b/interface/src/css/customTheme.scss
@@ -1158,11 +1158,10 @@ body {
 .max110 {
     max-width: 110px !important;
 }
-
-
-
-
-
+.w70 {
+    min-width: 60px !important;
+    max-width: 60px !important;
+}
 
 //separator style
 .capsSeparator{
