--- a/interface/src/App/Registration/RegForm/AuthInput/AuthInput.scss
+++ b/interface/src/App/Registration/RegForm/AuthInput/AuthInput.scss
@@ -30,3 +30,8 @@ $slider-button: #59698d;
     border: 1px solid #CF2C00 !important; 
     box-shadow: 0px 0px 5px rgba(207, 44, 0, 0.5) !important;
 }
+
+.auth-input__alert-text {
+    font-weight: 400;
+    color: #CF2C00 !important; 
+}
