--- a/interface/src/App/Registration/Privacy/Privacy.scss
+++ b/interface/src/App/Registration/Privacy/Privacy.scss
@@ -1,16 +1,14 @@
 $primary-color: #eff0f1;
 
-.registration {
+.privacy {
     max-width: 700px;
 
     background: $primary-color;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
-    
-    padding: 40px 30px;
 }
 
-.registration__text {
-    font-size: 1.5rem;
-    font-weight: 400;
+.privacy--text {
+    text-align: justify !important;
+    text-justify: inter-word !important;
 }
