login style classes renamed properly

--- a/interface/src/App/Login/Login.scss
+++ b/interface/src/App/Login/Login.scss
@@ -1,6 +1,6 @@
 $primary-color: #eff0f1;
 
-.registration {
+.login {
     max-width: 700px;
 
     background: $primary-color;
@@ -10,7 +10,7 @@ $primary-color: #eff0f1;
     padding: 40px 30px;
 }
 
-.registration__text {
+.login__text {
     font-size: 1.5rem;
     font-weight: 400;
 }
