--- a/interface/src/css/customTheme.scss
+++ b/interface/src/css/customTheme.scss
@@ -1457,11 +1457,19 @@ body {
 .sliderButton:focus {
     outline: none;
 }
+
 .sliderGroup {
     overflow: hidden;
     border: 2px solid $slider-button !important;
-    border-radius: 7px 7px 7px 7px
+    border-radius: 7px 7px 7px 7px;
+
+ 
 }
+
 .sliderGroup button:last-child {
+    border: none !important;
+}
+
+.sliderGroup a:last-child {
     border: none !important;
 }
