logout and programmatic page refresh implemented

--- a/interface/src/css/customTheme.scss
+++ b/interface/src/css/customTheme.scss
@@ -872,14 +872,18 @@ body {
 
 //fake button
 .langButton {
-    padding-top: 0px;
-    padding-bottom: 0px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     padding-left: 0px;
     padding-right: 0px;
     margin-left: 0.1em;
 
     background-color: transparent;
     border: none;
+
+    &:hover {
+        background-color: rgba(0, 0, 0, 0.05); 
+    }
 }
 
 //constr button
