--- a/interface/src/App/Navbar/User/User.scss
+++ b/interface/src/App/Navbar/User/User.scss
@@ -1,3 +1,28 @@
 .user--padding {
     padding-left: 10px !important;
 }
+
+.user__text {
+    width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+@media (max-width: 860px) { 
+    .user__text {
+        width: 100px;
+    }
+ }
+
+@media (max-width: 780px) { 
+    .user__text {
+        width: 80px;
+    }
+ }
+
+@media (max-width: 767px) { 
+    .user__text {
+        width: 100%;
+    }
+ }
