--- a/interface/src/App/Userpage/UserButtons/UserButtons.scss
+++ b/interface/src/App/Userpage/UserButtons/UserButtons.scss
@@ -1,4 +1,4 @@
-.profile__singleb {
+.user__singleb {
         border: none;
         border-bottom: 1px solid rgba(0, 0, 0, 0.25);
         border-right: 1px solid rgba(0, 0, 0, 0.25);
