auth button style changed

--- a/interface/src/App/Registration/RegForm/AuthButton/AuthButton.scss
+++ b/interface/src/App/Registration/RegForm/AuthButton/AuthButton.scss
@@ -3,7 +3,7 @@
     border-radius: 5px;
     border: none;
 
-    width: fit-content !important;
+    width: 250px;
     height: fit-content !important;
 
     display: -ms-flexbox;
