--- a/interface/src/App/Userpage/Info/Info.scss
+++ b/interface/src/App/Userpage/Info/Info.scss
@@ -1,7 +1,9 @@
 .user-info__text {
     font-weight: 400;
     font-size: 1.15rem;
+}
 
+.user-info__goverable-col {
     &:hover {
         background-color: rgb(226, 226, 226);
     }
@@ -9,5 +11,5 @@
 
 
 .user-info--border {
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.25);
 }
