--- a/interface/src/css/customTheme.scss
+++ b/interface/src/css/customTheme.scss
@@ -207,7 +207,7 @@ $tips-font: 12pt;
     &C5 {
         background-color: $figting-color !important;
         &.text {
-            color: rgb(255, 255, 255);
+            color: white;
         }
     }
     &C6 {
@@ -282,7 +282,64 @@ $tips-font: 12pt;
             color: black;
         }
     }
-   }
+}
+
+@mixin texts {
+    &T0 {
+            color: black;
+    }
+    &T1 {
+            color: white;
+    }
+    &T2 {
+            color: white;
+    }
+    &T3 {
+            color: black;
+    }
+    &T4 {
+            color: black;
+    }
+    &T5 {
+            color: white;
+    }
+    &T6 {
+            color: black;
+    }
+    &T7 {
+            color: black;
+    }
+    &T8 {
+            color: white;
+    }
+    &T9 {
+            color: black;
+    }
+    &T10 {
+            color: black;
+    }
+    &T11 {
+            color: black;
+    }
+    &T12 {
+            color: black;
+    }
+    &T13 {
+            color: black;
+    }
+    &T14 {
+            color: black;
+    }
+    &T15 {
+            color: black;
+    }
+    &T16 {
+            color: white;
+    }
+    &T17 {
+            color: black;
+    }
+}
 
 @mixin fills {
     &C0 {
@@ -448,6 +505,9 @@ $tips-font: 12pt;
     @include backgrounds;
 }
 
+.textColor {
+    @include texts;
+}
 
 
 //global rules
