--- a/interface/src/App/Userpage/Shbroker/UserShinyList/UserShinyList.scss
+++ b/interface/src/App/Userpage/Shbroker/UserShinyList/UserShinyList.scss
@@ -2,6 +2,8 @@ $slider-button: #59698d;
 
 .ushiny {
     min-height: 62px !important;
+    max-height: 250px !important;
+
     border: 1px solid $slider-button;
     border-radius: 5px;
 
