--- a/interface/src/App/ShinyBroker/SelectedUsers/SelectedUsers.scss
+++ b/interface/src/App/ShinyBroker/SelectedUsers/SelectedUsers.scss
@@ -1,2 +1,9 @@
-.seluser {
+$slider-button: #59698d;
+
+.seluser-header {
+    border-bottom: 0.5px solid $slider-button;
+    font-weight: 400;
+
+    -webkit-transition: all 0.15s cubic-bezier(0.165, 0.84, 0.44, 1);
+    transition: all 0.15s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
