user card finished

--- a/interface/src/App/ShinyBroker/SelectedUsers/UserCard/UserCard.scss
+++ b/interface/src/App/ShinyBroker/SelectedUsers/UserCard/UserCard.scss
@@ -12,7 +12,7 @@ $slider-button: #59698d;
    }
 }
 
-.usercard-broker__line {
+.usercard-broker__cell {
     overflow: hidden;
     text-overflow: ellipsis;
 }
