--- a/interface/src/App/Userpage/Info/Info.scss
+++ b/interface/src/App/Userpage/Info/Info.scss
@@ -13,3 +13,8 @@
 .user-info--border {
     border-bottom: 1px solid rgba(0, 0, 0, 0.25);
 }
+
+.user-info__title {
+    font-weight: 400;
+    font-size: 1.25rem;
+}
