--- a/interface/src/App/Userpage/CustomMoves/MoveConstructor.scss
+++ b/interface/src/App/Userpage/CustomMoves/MoveConstructor.scss
@@ -1,5 +1,5 @@
 .moveconstr__title {
     font-weight: 400;
     font-size: 1.25rem;
-    color: black;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.65);
 }
