--- a/interface/src/App/Userpage/ProfileButtons/ProfileButtons.scss
+++ b/interface/src/App/Userpage/ProfileButtons/ProfileButtons.scss
@@ -15,7 +15,7 @@
         display: flex;
         box-sizing: padding-box;
         background-color: transparent;
-        width: 100%;
+        min-width: 144px;
 
         -webkit-transition: all 0.1s linear;
         transition: all 0.1s linear;
