--- a/interface/src/App/Userpage/UserPokemon/PokemonBox/UserPokemonList/UserPokCard/UserPokCard.scss
+++ b/interface/src/App/Userpage/UserPokemon/PokemonBox/UserPokemonList/UserPokCard/UserPokCard.scss
@@ -1,12 +1,10 @@
 $slider-button: #59698d;
 
-.ushinycard {
+.upokcard {
     background-color: white;
 
     padding-left: 3px;
     padding-right: 3px;
-
-    max-height: 36px;
 
     border-radius: 3px;
     border: 0.5px solid $slider-button;
