--- a/interface/src/App/Userpage/CustomPokemon/PokemonBox/UserPokemonList/UserPokCard/UserPokCard.scss
+++ b/interface/src/App/Userpage/CustomPokemon/PokemonBox/UserPokemonList/UserPokCard/UserPokCard.scss
@@ -3,6 +3,7 @@ $slider-button: #59698d;
 .upokcard {
     background-color: white;
 
+    min-width: 190px;
     padding-left: 3px;
     padding-right: 3px;
 
