Serchable select: label added

--- a/interface/src/App/PvP/components/SearchableSelect/SearchableSelect.scss
+++ b/interface/src/App/PvP/components/SearchableSelect/SearchableSelect.scss
@@ -5,3 +5,10 @@ $slider-button: #59698d;
     border-color: $slider-button !important;
     font-size: 90% !important;
 }
+
+
+.searchable-select__text{
+    font-weight: 400 !important;
+    font-size: 13pt !important;
+    text-align: left;
+}
