--- a/interface/src/App/NotFound/NotFound.scss
+++ b/interface/src/App/NotFound/NotFound.scss
@@ -1,3 +1,5 @@
+$link-color: #0039e6;
+
 .not-found__window {
     position: relative;
     width: 85px;
@@ -21,4 +23,14 @@
 
     color: white;
     -webkit-text-stroke: 3px black;
+}
+
+.not-found__link--text {
+    text-decoration: none;
+    color: black;
+    &:hover {
+        color: $link-color;
+        text-decoration: underline;
+        cursor: pointer;
+    }
 }
