text color associated with energy indicator

--- a/interface/src/App/PvP/components/Indicators/EnergyIndicator/EnergyIndicator.scss
+++ b/interface/src/App/PvP/components/Indicators/EnergyIndicator/EnergyIndicator.scss
@@ -88,6 +88,63 @@ $water-color: #3590d1;
     }
 }
 
+@mixin texts {
+    &.T0 {
+        color: black;
+    }
+    &.T1 {
+        color: white;
+    }
+    &.T2 {
+        color: white;
+    }
+    &.T3 {
+        color: black;
+    }
+    &.T4 {
+        color: black;
+    }
+    &.T5 {
+        color: white;
+    }
+    &.T6 {
+        color: black;
+    }
+    &.T7 {
+        color: black;
+    }
+    &.T8 {
+        color: white;
+    }
+    &.T9 {
+        color: black;
+    }
+    &.T10 {
+        color: black;
+    }
+    &.T11 {
+        color: black;
+    }
+    &.T12 {
+        color: black;
+    }
+    &.T13 {
+        color: black;
+    }
+    &.T14 {
+        color: black;
+    }
+    &.T15 {
+        color: black;
+    }
+    &.T16 {
+        color: white;
+    }
+    &.T17 {
+        color: black;
+    }
+}
+
 .energy-indicator {
     position: relative;
     width: 34px;
@@ -130,4 +187,6 @@ $water-color: #3590d1;
     z-index: 10;
     width: 100%;
     text-align: center;
+
+    @include texts;
 }
