pver res entry stylesheet added. components reaordered

--- a/interface/src/App/PvE/Components/PveResult/PveResListFilter/PveResListSort/PveResListRender/PveResEntry/PveResEntry.scss
+++ b/interface/src/App/PvE/Components/PveResult/PveResListFilter/PveResListSort/PveResListRender/PveResEntry/PveResEntry.scss
@@ -1,3 +1,5 @@
+$tertiary-color: rgb(255, 255, 255);
+
 .pve-resentry__card {
     border: 0.5px solid rgba(0, 0, 0, 0.295);
     border-radius: 6px;
