--- a/interface/src/App/PvP/components/Description/MatrixDescr.scss
+++ b/interface/src/App/PvP/components/Description/MatrixDescr.scss
@@ -1,8 +1,38 @@
 $tertiary-color: rgb(255, 255, 255);
+$dark-color: #42434e;
+$slider-button: #59698d;
 
 .matrix-descr__card {
     border: 0.5px solid rgba(0, 0, 0, 0.295);
     border-radius: 6px;
     background-color: $tertiary-color;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+}
+
+.matrix-descr__cell-content {
+    font-weight: 500;
+    min-width: 70px !important;
+    max-width: 80px !important;
+    border: 1.5px solid $dark-color;
+    border-radius: 3px;
+    overflow: hidden;
+}
+
+.matrix-descr__cell-content div:first-child {
+    border-right: 1.5px solid $dark-color !important;
+}
+
+.matrix-descr__cell-content div:nth-child(2) {
+    border-right: 1.5px solid $dark-color !important;
+}
+
+.matrix-descr__cell-content div:first-child:hover,
+.matrix-descr__cell-content div:nth-child(2):hover,
+.matrix-descr__cell-content div:nth-child(3):hover {
+    background-color: white !important;
+}
+
+.matrix-descr__cell-content div:last-child {
+    border-top: 1.5px solid $dark-color !important;
+    user-select: none;
 }
