--- a/interface/src/App/PvP/components/Advisor/Advisor.scss
+++ b/interface/src/App/PvP/components/Advisor/Advisor.scss
@@ -1,3 +1,14 @@
+$primary-color: #eff0f1;
+
+.advisor {
+    background-color: $primary-color;
+    border-radius: 4px;
+    border: 0.5px solid rgba(0, 0, 0, 0.2);
+
+    height: fit-content;
+    max-width: 600px !important;
+}
+
 .advisor__willow--bubble-text {
     border: 0.5px solid rgba(0, 0, 0, 0.295);
     border-radius: 6px;
@@ -8,4 +19,20 @@
     background-color: #fff;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
     max-width: 320px;
+
+    position: absolute !important;
+    bottom: 25px;
+
+    font-weight: bolder;
+}
+
+.advisor__button {
+    margin-top: 0rem !important;
+    max-width: fit-content !important;
+    padding-top: 0.3rem !important;
+    padding-bottom: 0.3rem !important;
+    padding-left: 3rem !important;
+    padding-right: 3rem !important;
+
+    font-size: 0.75rem !important;
 }
