--- a/interface/src/App/PvE/Components/PveResult/PveWillow/PveWillow.scss
+++ b/interface/src/App/PvE/Components/PveResult/PveWillow/PveWillow.scss
@@ -8,4 +8,14 @@
     background-color: #fff;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
     max-width: 500px !important;
+
+    position: absolute !important;
+    bottom: 25px;
+
+    font-weight: bolder;
+}
+
+.pvewillow__icon {
+    width: 18px;
+    height: 18px;
 }
