--- a/interface/src/App/PvP/components/Indicators/EnergyIndicator/EnergyIndicator.scss
+++ b/interface/src/App/PvP/components/Indicators/EnergyIndicator/EnergyIndicator.scss
@@ -187,6 +187,7 @@ $water-color: #3590d1;
     z-index: 10;
     width: 100%;
     text-align: center;
+    user-select: none;
 
     @include texts;
 }
