--- a/interface/src/App/PvE/Components/PveResult/PveResListFilter/PveResListSort/PveResListRender/PveResEntry/PveResEntry.scss
+++ b/interface/src/App/PvE/Components/PveResult/PveResListFilter/PveResListSort/PveResListRender/PveResEntry/PveResEntry.scss
@@ -6,3 +6,7 @@ $tertiary-color: rgb(255, 255, 255);
     background-color: $tertiary-color;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
+
+.pve-resentry__card-separator {
+    border-top: 1px solid rgba(0, 0, 0, 0.295);
+}
