--- a/interface/src/App/PvE/Components/OopsError/OopsError.scss
+++ b/interface/src/App/PvE/Components/OopsError/OopsError.scss
@@ -1,4 +1,13 @@
 $link-color: #0039e6;
+$primary-color: #eff0f1;
+
+.ooops {
+    border-radius: 4px;
+    background-color: $primary-color;
+    border: 1px solid #acacac;
+
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+}
 
 .ooops__link--text {
     text-decoration: none;
