--- a/interface/src/App/NotFound/NotFound.scss
+++ b/interface/src/App/NotFound/NotFound.scss
@@ -1,4 +1,13 @@
 $link-color: #0039e6;
+$primary-color: #eff0f1;
+
+.not-found {
+    border-radius: 4px;
+    background-color: $primary-color;
+    border: 1px solid #acacac;
+
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+}
 
 .not-found__window {
     position: relative;
