--- a/interface/src/App/IndexPage/News/News.scss
+++ b/interface/src/App/IndexPage/News/News.scss
@@ -1,4 +1,17 @@
 $secondary-color: rgba(179, 179, 179, 0.28);
+$primary-color: #eff0f1;
+
+.news {
+    border-radius: 4px;
+    background-color: $primary-color;
+    border: 1px solid #acacac;
+
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+
+    &.bolder {
+        font-weight: bolder;
+    }
+}
 
 .news__title {
     border-radius: 3px 3px 0px 0px;
