--- a/interface/src/App/Movedex/TypeRow/TypeRow.scss
+++ b/interface/src/App/Movedex/TypeRow/TypeRow.scss
@@ -1,21 +1,26 @@
 $slider-button: #59698d;
 $slider-active: #b1dbe2;
 
-.eggsslider-group {
+.type-row__icon {
+    width: 16px;
+    height: 16px;
+}
+
+.typeslider-group {
     overflow: hidden;
     border: 2px solid $slider-button !important;
     border-radius: 7px 7px 7px 7px;
 }
 
-.eggsslider-group button:last-child {
+.typeslider-group button:last-child {
     border: none !important;
 }
 
-.eggsslider-group a:last-child {
+.typeslider-group a:last-child {
     border: none !important;
 }
 
-.eggsslider-group__button {
+.typeslider-group__button {
     font-weight: 500;
     background-color: rgba(255, 255, 255, 0);
 
@@ -34,17 +39,17 @@ $slider-active: #b1dbe2;
     }
 }
 @media (max-width: 768px) {
-    .eggsslider-group__button {
+    .typeslider-group__button {
         padding-left: 2px !important;
         padding-right: 2px !important;
     }
 }
 @media (max-width: 576px) {
-    .eggsslider-group__button {
+    .typeslider-group__button {
         padding-left: 1px !important;
         padding-right: 1px !important;
     }
 }
-.eggsslider-group__button:focus {
+.typeslider-group__button:focus {
     outline: none;
 }
