--- a/interface/src/App/Pokedex/PokeCard/SliderBlock/SliderBlock.scss
+++ b/interface/src/App/Pokedex/PokeCard/SliderBlock/SliderBlock.scss
@@ -1,21 +1,21 @@
 $slider-button: #59698d;
 $slider-active: #b1dbe2;
 
-.eggsslider-group {
+.pokcardslider-group {
     overflow: hidden;
     border: 2px solid $slider-button !important;
     border-radius: 7px 7px 7px 7px;
 }
 
-.eggsslider-group button:last-child {
+.pokcardslider-group button:last-child {
     border: none !important;
 }
 
-.eggsslider-group a:last-child {
+.pokcardslider-group a:last-child {
     border: none !important;
 }
 
-.eggsslider-group__button {
+.pokcardslider-group__button {
     font-weight: 500;
     background-color: rgba(255, 255, 255, 0);
 
@@ -33,18 +33,19 @@ $slider-active: #b1dbe2;
         outline: none;
     }
 }
+
 @media (max-width: 768px) {
-    .eggsslider-group__button {
+    .pokcardslider-group__button {
         padding-left: 2px !important;
         padding-right: 2px !important;
     }
 }
 @media (max-width: 576px) {
-    .eggsslider-group__button {
+    .pokcardslider-group__button {
         padding-left: 1px !important;
         padding-right: 1px !important;
     }
 }
-.eggsslider-group__button:focus {
+.pokcardslider-group__button:focus {
     outline: none;
 }
