--- a/interface/src/App/PvP/components/Description/MatrixDescr.scss
+++ b/interface/src/App/PvP/components/Description/MatrixDescr.scss
@@ -7,6 +7,9 @@ $slider-button: #59698d;
     border-radius: 6px;
     background-color: $tertiary-color;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+
+    font-size: 115% !important;
+    font-weight: 450 !important;
 }
 
 .matrix-descr__cell-content {
