--- a/interface/src/App/Movedex/Movedex.scss
+++ b/interface/src/App/Movedex/Movedex.scss
@@ -9,3 +9,24 @@ $slider-button: #59698d;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
     max-width: 1230px !important;
 }
+
+.movedex__descr {
+    border-radius: 4px;
+    background-color: $primary-color;
+    border: 1px solid #acacac;
+
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    max-width: 1230px !important;
+
+    p {
+        text-align: justify !important;
+        text-justify: inter-word !important;
+        font-weight: bolder;
+    }
+
+    ul {
+        text-align: justify !important;
+        text-justify: inter-word !important;
+        font-weight: bolder;
+    }
+}
