--- a/interface/src/App/PvP/PvpPage.scss
+++ b/interface/src/App/PvP/PvpPage.scss
@@ -18,4 +18,16 @@ $primary-color: #eff0f1;
     border: 0.5px solid rgba(0, 0, 0, 0.2);
     height: fit-content;
     max-width: 1230px !important;
+
+    p {
+        text-align: justify !important;
+        text-justify: inter-word !important;
+        font-weight: bolder;
+    }
+
+    ul {
+        text-align: justify !important;
+        text-justify: inter-word !important;
+        font-weight: bolder;
+    }
 }
