--- a/interface/src/App/PvpRating/PvpRating.scss
+++ b/interface/src/App/PvpRating/PvpRating.scss
@@ -17,3 +17,23 @@ $slider-button: #59698d;
     border-width: 0.8px !important;
     border-color: $slider-button !important;
 }
+
+.pvp-rating__descr {
+    border-radius: 4px;
+    background-color: $primary-color;
+    border: 1px solid #acacac;
+
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+
+    p {
+        text-align: justify !important;
+        text-justify: inter-word !important;
+        font-weight: bolder;
+    }
+
+    ul {
+        text-align: justify !important;
+        text-justify: inter-word !important;
+        font-weight: bolder;
+    }
+}
