--- a/interface/src/App/Pokedex/PokeCard/IconBlock/IconBlock.scss
+++ b/interface/src/App/Pokedex/PokeCard/IconBlock/IconBlock.scss
@@ -12,7 +12,12 @@
 .pokedex-iconblock__title {
     font-family: "Baloo Bhaina", cursive;
     font-size: 1.5em;
-    font-weight: 600;
+    font-weight: 700;
+}
+
+.pokedex-iconblock--text {
+    font-size: 1.1em;
+    font-weight: 400;
 }
 
 .pokedex-iconblock__icon {
