--- a/interface/src/App/Userpage/CustomPokemon/PokemonBox/UserPokemonList/UserPokCard/UserPokCard.scss
+++ b/interface/src/App/Userpage/CustomPokemon/PokemonBox/UserPokemonList/UserPokCard/UserPokCard.scss
@@ -10,6 +10,23 @@ $slider-button: #59698d;
     border-radius: 3px;
     border: 1px solid $slider-button !important;
     font-weight: bold;
-    
+
     cursor: pointer;
+}
+
+.upokcard__container {
+    position: relative;
+}
+
+.upokcard__pok {
+    width: 48px;
+    height: 48px;
+}
+
+.upokcard__shadow {
+    width: 18px;
+    height: 18px;
+
+    position: absolute !important;
+    right: -3px;
 }
