--- a/interface/src/App/Userpage/UserShinyBroker/UserShinyList/UserShinyCard/UserShinyCard.scss
+++ b/interface/src/App/Userpage/UserShinyBroker/UserShinyList/UserShinyCard/UserShinyCard.scss
@@ -11,5 +11,21 @@ $slider-button: #59698d;
     border-radius: 3px;
     border: 0.5px solid $slider-button;
     font-weight: bold;
-    
+}
+
+.ushinycard__container {
+    position: relative;
+}
+
+.ushinycard__pok {
+    width: 36px;
+    height: 36px;
+}
+
+.ushinycard__shiny {
+    width: 18px;
+    height: 18px;
+
+    position: absolute !important;
+    right: -3px;
 }
