zeros list element added

--- a/interface/src/App/PvP/components/Advisor/AdvisorPages/AdvisorSort/AdvisorRender/AdvisorPanel/AdvisorPanelBody/ZeroPokemon/ZeroPokemon.scss
+++ b/interface/src/App/PvP/components/Advisor/AdvisorPages/AdvisorSort/AdvisorRender/AdvisorPanel/AdvisorPanelBody/ZeroPokemon/ZeroPokemon.scss
@@ -1,15 +1,15 @@
-.table-icon__container {
+.zero-pok__container {
     min-width: 60px !important;
     max-width: 60px !important;
     position: relative;
 }
 
-.table-icon__pok {
-    width: 36px;
-    height: 36px;
+.zero-pok__pok {
+    width: 48px;
+    height: 48px;
 }
 
-.table-icon__shadow {
+.zero-pok__shadow {
     width: 16px;
     height: 16px;
 
