logic moved outside components

--- a/interface/src/App/PvE/Components/PveResult/PveResListFilter/PveResListSort/PveResListRender/PveResEntry/HpRemaining/HpRemaining.scss
+++ b/interface/src/App/PvE/Components/PveResult/PveResListFilter/PveResListSort/PveResListRender/PveResEntry/HpRemaining/HpRemaining.scss
@@ -1,4 +1,8 @@
 .hp-remaining {
+    font-weight: bolder !important;
+}
+
+.hp-remaining__win {
     font-size: 115% !important;
     font-weight: 450 !important;
 }
