group result implemented

--- a/interface/src/App/PvE/Components/PveResult/PveResListFilter/PveResListSort/PveResListRender/PveResEntry/CollapseCardWrapper/CollapseCard/CollapseCard.scss
+++ b/interface/src/App/PvE/Components/PveResult/PveResListFilter/PveResListSort/PveResListRender/PveResEntry/CollapseCardWrapper/CollapseCard/CollapseCard.scss
@@ -1,6 +1,6 @@
 $secondary-color: rgba(179, 179, 179, 0.28);
 
-.pvecard-body {
+.coll-card {
     background-color: $secondary-color;
     border-radius: 5px;
     border: 0.5px solid rgba(0, 0, 0, 0.295);
