--- a/interface/src/App/PvE/Components/PveResult/PlayerResProcessor/PlayerResEntry/PlayerResEntry.scss
+++ b/interface/src/App/PvE/Components/PveResult/PlayerResProcessor/PlayerResEntry/PlayerResEntry.scss
@@ -4,3 +4,7 @@
     background-color: white;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
+
+.player-res-entr__separator {
+    border-top: 1px solid rgba(0, 0, 0, 0.295);
+}
